2005-06-02  Jeremy Handcock  <handcock@redhat.com>

	* planning/new.html: New.
	* index.html: Add link to above.

2005-05-30  Jeremy Handcock  <handcock@redhat.com>

	* downloads.html: Add 3.0 M1 build.
	* index.html: Add link to above.

2005-05-24  Jeremy Handcock  <handcock@redhat.com>

	* index.html: Remove references to CDT and C/C++ applications.

2005-05-19  Jeremy Handcock  <handcock@redhat.com>

	* .project: New.
	* planning/eclipse-rpm-3_0.html: Update completed items.

2005-05-18  Jeremy Handcock  <handcock@redhat.com>

	* planning/eclipse-rpm-3_0.html: Update completed items.

2005-01-11  Jeremy Handcock  <handcock@redhat.com>

	* downloads.html: Add nightly builds.

2005-01-04  Jeremy Handcock  <handcock@redhat.com>

	* developer/structure.html: Update status.
	* planning/*: New files.
	* index.html: Add News entry, links to mailing list and development
	plans.

2004-10-21  Jeremy Handcock  <jbh@ualberta.ca>

	* developer/structure.html: Change my status to independent.

2004-10-18  Jeremy Handcock  <handcock@redhat.com> 
		
	* index.html: Update news, add downloads link.
	* downloads.html: New.
