@@ -25,9 +25,10 @@
 </table>
 
 <p>The Eclipse-RPM sources are available under anonymous CVS access:</p>
-<p><code>cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools login</code></p>
+<pre>$ cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools login</pre>
 <p>Press 'enter' when prompted for a password.</p>
-<p><code>cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools co -z9 org.eclipse.cdt-contrib/org.eclipse.cdt.rpm</code></p>
+<pre>$ cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools co -z9 \
+	org.eclipse.cdt-contrib/org.eclipse.cdt.rpm</pre>
 
 <!-- End CVS section -->
 
@@ -52,7 +53,7 @@ mailing list.</p>
 href="http://bugs.eclipse.org/bugs">Bugzilla</a> ticket, then attach your patch
 to the open bug.  A committer will review your patch and commit it to the
 source repository upon approval.  Alternatively, you can post your patch to the
-<a href="mailto:cdt-patch@eclipse.org">cdt-patch@eclipse.org</a>
+<a href="mailto:cdt-contrib-dev@eclipse.org">cdt-contrib-dev@eclipse.org</a>
 mailing list.</p>
 
 <p>We use <a href="http://www.gnu.org/prep/standards/html_node/Change-Logs.html#Change-Logs">GNU-style
@@ -61,6 +62,38 @@ patch, you generally paste your ChangeLog entry above the beginning of
 the patch in the patch file.</p>
 
 <!-- End Patches section -->
+
+<!-- Begin Building section -->
+<table class="section">
+<tr><td>Building Eclipse-RPM</td></tr>
+</table>
+
+<p>We use the standard <a
+href="http://dev.eclipse.org/viewcvs/index.cgi/*checkout*/org.eclipse.releng.basebuilder/readme.html?rev=HEAD">Eclipse
+PDE build procedure</a>.  To build Eclipse-RPM, you must have a
+suitable platform driver installed.  Then, execute the following
+procedure on your build machine:</p>
+<ol>
+<li>Check out the Eclipse-RPM releng plug-in:
+<pre>
+$ cvs -d :pserver:anonymous@dev.eclipse.org/home/tools co -z9 \
+	org.eclipse.cdt-contrib/org.eclipse.cdt.rpm/org.eclipse.cdt.rpm.releng
+</pre>
+</li>
+<li>Start the build:
+<pre>
+$ cd /path/to/org.eclipse.cdt.rpm.releng
+$ export ECLIPSE_HOME=/path/to/eclipse/dir
+$ java -cp $ECLIPSE_HOME/startup.jar \
+	org.eclipse.core.launcher.Main \
+	-application org.eclipse.ant.core.antRunner \
+	-DbaseLocation=$ECLIPSE_HOME \
+	-Dpde.build.scripts=$ECLIPSE_HOME/plugins/org.eclipse.pde.build_3.1.0/scripts
+</pre>
+<li>As usual, the PDE builder will deposit a distributable archive (.zip) for the build in the <code>results</code> directory.</li>
+</ol>
+
+<!-- End Building section -->
 
 <!-- Begin Development Guidelines section -->
 <table class="section">
