@@ -1,3 +1,7 @@
+2005-06-13  Jeremy Handcock  <handcock@redhat.com>
+
+	* developer/info.html: Add how-to-build notes.
+
 2005-06-02  Jeremy Handcock  <handcock@redhat.com>
 
 	* planning/new.html: New.
